# kansuji-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: lib.rs
