[package]
name = "kansuji"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Naoki Kaneko a.k.a. puripuri2100"]
readme = "README.md"
repository = "https://github.com/puripuri2100/kansuji-rs.git"
rust-version = "1.56.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"

